--- a/dubbodemo-server/src/main/resources/application.yml
+++ b/dubbodemo-server/src/main/resources/application.yml
@@ -1,12 +1,14 @@
 server:
   port: 8081 #项目端口
 
-spring:
+dubbo:
   application:
-    name: dubbo-server-provider #应用配置，用于配置当前应用信息，
-  dubbo:                        #注册中心配置，用于配置连接注册中心相关信息。
-    server: true
-    registry: zookeeper://127.0.0.1:2181
-    protocol:                   #协议配置，用于配置提供服务的协议信息，协议由提供方指定，消费方被动接受（订阅）
-      name: dubbo
-      port: 29081
+    id: dubbo-provider-demo
+    name: dubbo-provider-demo
+  scan:
+    base-packages: com.example.demo.service   # Base packages to scan Dubbo Component: @com.alibaba.dubbo.config.annotation.Service
+  protocol: # Dubbo Protocol
+    name: dubbo
+    port: -1
+  registry: # Dubbo Registry
+    address: zookeeper://127.0.0.1:2181  #直连配为 N/A
