添加自定义参数分组校验

--- a/dubbodemo-server/pom.xml
+++ b/dubbodemo-server/pom.xml
@@ -76,6 +76,11 @@
             <artifactId>dubbodemo-api</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
