--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <lombok.version>1.18.0</lombok.version>
         <dubbo-spring.version>0.2.1-SNAPSHOT</dubbo-spring.version>
         <jodatime.version>2.10.1</jodatime.version>
+        <fastjson.version>1.2.47</fastjson.version>
     </properties>
 
     <parent>
@@ -82,6 +83,12 @@
                 <groupId>joda-time</groupId>
                 <artifactId>joda-time</artifactId>
                 <version>${jodatime.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>${fastjson.version}</version>
             </dependency>
 
         </dependencies>
